Fix spacing issues in form box

--- a/source/assets/stylesheets/pages/_contact.scss
+++ b/source/assets/stylesheets/pages/_contact.scss
@@ -8,7 +8,8 @@ form {
   // max-width: 30rem;
 
   p {
-    margin: 0;
+    // margin: 0;
+    margin-top: 1rem;
   }
 
   input {
